@@ -1,3 +1,8 @@
+Sat Jul 14 11:03:37 CEST 2018
+	Integrate patch for checking digest authentication based on
+	a digest, allowing servers to store passwords only hashed.
+	Adding new function MHD_digest_auth_check_digest(). -CG/FIXME: ack co-author!
+
 Sat Mar 10 12:15:35 CET 2018
 	Upgrade to gettext-0.19.8.1. Switching to more canonical
 	gettext integration. -CG
